--- a/src/css/LoginForm.css
+++ b/src/css/LoginForm.css
@@ -36,3 +36,9 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #ff6b81;
 }
+
+.error {
+    color: red;
+    text-align: center;
+    margin-top: 10px;
+}
