--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,23 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   text-align: center;
+
 }
 
 .logo {
@@ -40,3 +55,4 @@
 .read-the-docs {
   color: #888;
 }
+
