--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -1,3 +1,13 @@
+.home-page {
+    height: 40vh;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
 p {
     color: white;
 }
