--- a/src/css/LoginForm.css
+++ b/src/css/LoginForm.css
@@ -1,4 +1,12 @@
-
+.login-form {
+    background-color: #2c2c2c; /* Lighter background for the form */
+    padding: 30px;
+    border-radius: 10px;
+    width: 330px;
+    margin: auto;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    margin-top: 10%;
+}
 
 h1, h2 {
     color: red;
