--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
-  place-items: center;
   text-align: center;
   min-width: 100%;
   min-height: 100vh;
