--- a/src/css/LoginForm.css
+++ b/src/css/LoginForm.css
@@ -6,12 +6,17 @@
     margin: auto;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     margin-top: 100px;
+    box-shadow: rgba(255, 0, 0, 0.5) 0px 0px 20px;
 }
 
 h1, h2 {
-    color: red;
+    color: white;
     text-align: center;
     margin-top: 50px;
+}
+
+.login-form h1 span {
+    color: red;
 }
 
 label {
@@ -27,7 +32,17 @@ input[type="password"] {
     margin-bottom: 20px;
     border: none;
     border-radius: 5px;
+    background-color: white;
+    color: black;
 }
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+    outline: none;
+    box-shadow: inset 0 0 20px rgba(255, 0, 0, 0.5);
+}
+
+
 button[type="submit"] {
     background-color: #ff4757;
     color: white;
