only render the leave couple button when user is in a couple

--- a/src/css/CreateCoupleButton.css
+++ b/src/css/CreateCoupleButton.css
@@ -6,6 +6,7 @@
     border-radius: 4px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+    margin-top: 20px;
 }
 
 .create-couple-button:hover {
