--- a/src/css/JoinCoupleForm.css
+++ b/src/css/JoinCoupleForm.css
@@ -8,6 +8,7 @@
     background-color: black;
     border: 1px solid white;
     border-radius: 8px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
 }
 
 .join-couple-form label {
