--- a/src/css/Matches.css
+++ b/src/css/Matches.css
@@ -2,6 +2,11 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
+    margin-top: 20px;
+}
+
+.matches-grid li {
+    list-style: none;
 }
 
 .matches-page > h1 {
