--- a/src/css/Matches.css
+++ b/src/css/Matches.css
@@ -2,7 +2,16 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 10px 20px;
+}
+
+@media screen and (min-width: 769px) {
+    .matches-grid {
+        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    }
+    
 }
 
 .matches-grid li {
@@ -15,4 +24,22 @@
 
 #matches-intro-text {
     color: seasmoke;
+}
+
+.match-item {
+    background-color: #333;
+    border: 1px solid #dee2e6;
+    border-radius: 0.375rem;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    min-width: 300px;
+    width: 100%;
+    height: 600px;
+}
+
+.match-item img {
+    width: 100%;
+    height: 500px;
+    border-radius: 0.375rem;
 }
